# InstaNovo-P

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/finetune_scheduler/: finetune_schedule_gu_decoder-encoder-v2.yaml
configs/instanovo/: instanovo_finetune_phospho.yaml
instanovo/: __init__.py  constants.py
instanovo/transformer/: dataset.py  model.py  predict.py  train.py
instanovo/utils/: metrics.py  minLoRA.py  residues.py  schedulers.py
notebooks/: getting_started.ipynb
