[project]
name = "instanovo-phospho"
version = "1.0.0"
description = "InstaNovo-P: A de novo peptide sequencing model for phosphoproteomics"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8,<3.11"
dependencies = [
  "torch==1.13.1",
  "pytorch-lightning==1.8.6",
  "finetuning-scheduler==0.3.4",
  "polars==0.19.7",
  "pandas==2.0.3",
  "numpy==1.23.3",
  "jiwer==3.0.3",
  "matchms==0.22.0",
  "spectrum-utils==0.4.1",
  "pyopenms==3.1.0",
  "pyarrow==15.0.0",
  "seaborn==0.12.0",
  "matplotlib==3.7.2",
  "scikit-learn==1.1.2",
  "tensorboard==2.10.1",
  "tensorboardX==2.5.1",
  "tqdm==4.65.0",
  "omegaconf==2.2.3",
  "click==8.1.7",
  "numba==0.57.1",
  "datasets",
  "pyyaml>=6.0",
  "setuptools<81",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["instanovo*"]
